--- a/vuetify-project/package.json
+++ b/vuetify-project/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
@@ -15,6 +15,7 @@
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
     "@types/animejs": "^3.1.6",
     "@types/node": "^18.11.9",
     "@types/webfontloader": "^1.6.35",
