--- a/vuetify-project/tsconfig.json
+++ b/vuetify-project/tsconfig.json
@@ -14,7 +14,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
-    "types": ["vuetify"],
+    "types": ["vuetify", "vite/client"],
     "paths": {
       "@/*": ["src/*"]
     },
