--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
 version: "3.8" # docker-composeのバージョン選択
 services:
-  node: # サービス名
-    build: # Dockerfileの設定
+  # サービス名
+  node:
+    # Dockerfileの設定
+    build:
       context: . # Dockerfileがあるディレクトリ
       dockerfile: Dockerfile # Dockerfileの名前
-    volumes: # データの永続化
+    # データの永続化
+    volumes:
       - ./:/app:cached # ホストのカレントディレクトリとコンテナ内の作業ディレクトリを同期
-      # ↓↓↓コメントアウトしたまま↓↓↓
       - ./vuetify-project/node_modules:/app/vuetify-project/node_modules # 特定のパスを独立した名前付きボリュームとして定義
-    environment: # 環境変数
+    environment:
       - HOST=0.0.0.0 # localhost接続をする際に必要
       - CHOKIDAR_USEPOLLING=true # ホットリロードを可能にする
     tty: true
-    ports: # ホストのポートとコンテナのポートを接続
+    ports:
       - "3000:3000"
-      
-# 実行コマンド 今回はviteの実行コマンド
-# ↓↓↓コメントアウトしたまま↓↓↓
-volumes: # 名前付きボリュームの設定
+      - "4173:4173"
+volumes:
+  # 名前付きボリュームの設定
   node_modules:
