Add font setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
     "cSpell.words": [
         "animejs",
         "ehon",
+        "fontface",
         "muni",
-        "vuetify"
+        "roboto",
+        "vuetify",
+        "webfontloader"
     ]
 }
