--- a/vuetify-project/package.json
+++ b/vuetify-project/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview --port 8080"
+    "preview": "vite preview",
+    "netlify": "netlify dev"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
@@ -21,7 +22,9 @@
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^3.0.3",
     "animejs": "^3.2.1",
+    "netlify-cli": "^12.2.8",
     "sass": "^1.56.1",
+    "swiper": "^8.4.5",
     "typescript": "^4.0.0",
     "vite": "^3.0.9",
     "vite-plugin-fonts": "^0.6.0",
