--- a/vuetify-project/package.json
+++ b/vuetify-project/package.json
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/animejs": "^3.1.6",
     "@types/node": "^18.11.9",
+    "@types/three": "^0.149.0",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^3.0.3",
     "animejs": "^3.2.1",
