--- a/vuetify-project/docker-compose.yml
+++ b/vuetify-project/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     # データの永続化
     volumes:
       - ./:/app:cached # ホストのカレントディレクトリとコンテナ内の作業ディレクトリを同期
-      - ./vuetify-project/node_modules:/app/vuetify-project/node_modules # 特定のパスを独立した名前付きボリュームとして定義
+      - ./node_modules:/app/node_modules # 特定のパスを独立した名前付きボリュームとして定義
     environment:
       - HOST=0.0.0.0 # localhost接続をする際に必要
       - CHOKIDAR_USEPOLLING=true # ホットリロードを可能にする
