--- a/vuetify-project/Makefile
+++ b/vuetify-project/Makefile
@@ -1,6 +1,6 @@
 docker-up:
-	docker-compose up -d --build
+	docker-compose up -d --build 
 server-on:
-	docker-compose exec node sh -c "cd /app/vuetify-project &&  yarn dev"
+	docker-compose exec node sh -c "yarn dev"
 docker-down:
 	docker-compose down
